Fix issue of horizontal scroll

--- a/starter_code/stylesheets/style.css
+++ b/starter_code/stylesheets/style.css
@@ -18,10 +18,6 @@ footer links grey: #454245
     outline: none;
 }
 
-html, body {
-    width: 100vw;
-}
-
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
